@@ -37,6 +37,9 @@ Bug Fixes
 * SOLR-7518: New Facet Module should respect shards.tolerant and process all non-failing shards
   instead of throwing an exception. (yonik)
 
+* SOLR-7574: A request with a json content type but no body caused a null pointer exception (yonik)
+  
+
 Other Changes
 ----------------------
 
